--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">DrinkADay</string>
     <string name="hello_world">Hey bitches!!!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="map_view">MapView</string>
+    <string name="profile_view">Profile</string>
 </resources>
